proj1/testing/error/notInAlphabeterr.inp
* B Beta I II III RX$E